# ChangeLog for dev-util/dbus-test-runner
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/dbus-test-runner/ChangeLog,v 1.18 2013/12/08 20:06:06 pacho Exp $

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> dbus-test-runner-12.10.1.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> dbus-test-runner-12.10.1.ebuild:
  amd64 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> dbus-test-runner-12.10.1.ebuild:
  Drop -Werror usage

*dbus-test-runner-12.10.1 (09 Mar 2013)

  09 Mar 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +dbus-test-runner-12.10.1.ebuild:
  Version bump

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> dbus-test-runner-0.0.5.ebuild:
  Add ~arm, wrt bug #449220

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> dbus-test-runner-0.0.5.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> dbus-test-runner-0.0.5.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> dbus-test-runner-0.0.5.ebuild:
  Add ~ia64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> dbus-test-runner-0.0.5.ebuild:
  Add ~ppc64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> dbus-test-runner-0.0.5.ebuild:
  Add ~ppc, wrt bug #449220

  20 Dec 2012; Michael Palimaka <kensington@gentoo.org>
  -dbus-test-runner-0.0.4.ebuild:
  Remove old.

  27 Jun 2012; Samuli Suominen <ssuominen@gentoo.org>
  dbus-test-runner-0.0.5.ebuild:
  Move dev-util/intltool from RDEPEND to DEPEND. Missing dev-libs/glib >= 2.30
  dependency.

*dbus-test-runner-0.0.5 (21 Feb 2012)

  21 Feb 2012; Johannes Huber <johu@gentoo.org> +dbus-test-runner-0.0.5.ebuild:
  Version bump wrt bug #405121.

  05 Jan 2012; Michael Sterrett <mr_bones_@gentoo.org>
  dbus-test-runner-0.0.4.ebuild:
  add missing test to IUSE

*dbus-test-runner-0.0.4 (04 Jan 2012)
