@@ -1,16 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST dbus-test-runner-0.0.5.tar.gz 364386 SHA256 6f22fd278981afb48ee8069991b86f011929550e9335e0082d366af521f76d1e SHA512 3e73530133c136650feac6218c890db4ca2109a318114f9869116566f693704d640f86fd1e6c2488fd57707d469790614b968c8f701661c37fb10523dbe934de WHIRLPOOL 02bc5667175f69895a74adb4002813061df717c24dd1bfdcfccabf9a4cd4fafdd72c7a487c9e45b3445382ef0d77d2406ee0332c3c8d3c70705a8bc752e1c801
 DIST dbus-test-runner-12.10.1.tar.gz 382108 SHA256 71f2aa4a48a8f88f1629389f902bbfaf42df4b1fcbea9473acc78de75fab525f SHA512 6d40d607fdc417ebb9aaa6dc3cdd41a8ff1563cb3791689d17a99d105a0c16dad8ffcaf3da7ab6b8c3dcae17d2eba1bf8a6a5d92dc1d3de0975218220ed3c9c0 WHIRLPOOL 2c14b7022aede43c4ce2e4afb1e457a0aebc443ec956552eefd7e6a101aa0045d5bd2e91c9fa0d8ddd93315fc7b5a65d0dadc045acbae11eaa00380b4b45a951
-EBUILD dbus-test-runner-0.0.5.ebuild 699 SHA256 b07807261b6586fc9158145962cb9542a0b4d1420f9ce7f637d6d3334f8c9b3c SHA512 c611a0a287c1e55bb223b62d8b7ed2ca05e5717fffc96394442fe42d9c3da8cd65964cf2ec8c028f19f1c9879f4a7921f1e26e87cb22b52a550efd4b182542b3 WHIRLPOOL b83f9f366dcdcdb0be1700e1c2cdc0ee2dfd453fd74b0b48e5eabe7a362aa35f37e47a3a58d77df0385974bea09b69baf03170c6963cd58ebae67adeee22f6f3
 EBUILD dbus-test-runner-12.10.1.ebuild 871 SHA256 7443c08b75b06632a78b4c8e96a1d007a24dc11f19666ec74a077c4e6bc0785c SHA512 e6368b9f2757125d0be6979b2a0121ba65a7541898cc9b773ce56315c6896372f23b070ef734c4e8369cf47bd2fadd299765dcd6342446578af922630de0f8d6 WHIRLPOOL 2696ad4733bb9a8cbf636717f6f4d6aa6296dddc93a6275f8280435bf4d492090e3dc66fcb1f4c9aad34e292275595d0aa915d95a5c2667cb93d4b5fb659af01
-MISC ChangeLog 2419 SHA256 9a403fc9ef610b80dd7a06147c919e4461a745e5b861348a0ee94fa215017117 SHA512 c8f9aac5872790bb8c95cdd3435280aecbbeedab3da751dc4bc8a3fde9b8b887ae9cac11291702aff3337d8a2582715f9c13cf27f9622bd658b15f77f68b67b2 WHIRLPOOL cf40101921f051aa636ffeef4ef368c57ea0b96dee1c43d09a9b0be32b2e90db16b84fd3614d3a5c30998a94c5b811427272a420b8110b858b06efff92590693
+MISC ChangeLog 2529 SHA256 eb3669534945d3e9fc95c26f488027c074b89acbd7193e17a3a78dbf1069defc SHA512 2a2f3e99f4344c40165ff61ca76b096b5006ccd70d49d79682535580013e4d108151eeb7beb719a935762f923e871d3fb06d5a6dd543432d3de081ea97439965 WHIRLPOOL 6012efe9fea6cfa9c013725d277475972c21d9b5c8e4448aa83fa58d642166b2224cd4895a003f22b56dd89a37b11b051658858ce9075f09c17d30b7459d6ef0
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKk0S8ACgkQCaWpQKGI+9S5eACaAgTidKGVXM6U1vUPg6yjeJrM
-Y4gAn1Vk24Sl48bOOhLV2YcYnH8TmASE
-=XKnm
+iQJiBAEBCABMBQJS8n20RRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7HxGD/98wYdurdqPu1ea4RSPnL0ZK3CizUUdoySW7DSzHMnZW3BbxEXJu4fGVhud
+l4otA3i6aPpPB3tWC1jWi3bFxcAUjpHHmIYCpsz0RNTvrhM6jAt3160+tMXJaAI8
+0cnoKPdUqw+RUEY81/eH1y+jZG3gY+sxDCBbrzEfmxtPDNWFVQhFYwAyYM1veJ+1
+uCCK0FGzOa3M560kqKu2fzPKZooTgKwYjHolOxpKSsOncCJ2exC9I1u1kFx/bfl3
+U3VhWPncBmHXPeqa1/diuxpMfDawO6X7bGfoSXvojuwT8JGWWp3OXSvKXtuIRaa3
+IY6O2jdhww2j/xkrLAueLWPNrWbhtNI3FFfLM+bGUCCRJM5F7jT36UWGzJAa0iVm
+GFXc1Cf2OlJ6OdnEw8FWx4aOEmoiezvfrLSt6tjH9BL8NS5datMcbg1Ms4wFgqap
+pN4RcP08JFgy7w5vYfDrO/nY8FgwaJg7WiRBx9+9DObSmdAXdBb4duH2ft3d+GZ8
+tSyuyUhQgfp1nEvFq1fWcJl6wDK/Z0H+CnqHia2xtV2Fq3SKvSciwqZnUIelDhjN
+avfvIr6fef4eMqTjcQuxVRR2SstExPDlUYjrbAJqB1IawWdrXIQxB8zWdJ0ZKl8m
+nKO/wbHlWK0gw/Crym5lmbTJx3I5pbEqo0a4O0DhIE8Oyvnbmw==
+=NOa6
 -----END PGP SIGNATURE-----
