@@ -6,17 +6,23 @@ AUX kpovmodeler-1.1.3-freetype-include.patch 437 SHA256 506d82a9c92d135d77e106fc
 AUX kpovmodeler-1.1.3-underlinking.patch 596 SHA256 927580a7ecdd25e4ae3904e05fa931b5c6e29a5648af0fbd15b1a1c91866bf15 SHA512 ebaeab7d4d996867c0e0061db9749929c594dd1098260b444782ae9f5bee2c6bc1b41819acb5edbc00a37cec30adc85fbe0788d29646ce7b5face411eb68715d WHIRLPOOL 9f8e739caf2c9805fdcec6ab8da46a5320ff830b89e850ac642f7ec7bbd69c470c17d9f0b6d85a18f2cf364cdd6f3560cd505ccc34263101057b4381b6cb16a8
 DIST kpovmodeler-1.1.3-kde4.1.1.tar.bz2 1875515 SHA256 3cef42828234500452275542b84c9c077a12ec8640df68c0952f7706fde13867 SHA512 8cfdde653ec93bc044d049ecf61b4d106d7415874668f6f56e9f59fb88f023e78717592e5e3a0aff071d0d4a84ac51f8457bedb5b1fa48e92f06c6d1d08385f6 WHIRLPOOL cfa950f200bda32eb6d42e0d200fd40afd4d8c36548f97929a04f383e324d0f6c6ff84e818d12ebfd8f88c0522f5058030e6ca3912e955a3dc3e0ab23e70e03f
 EBUILD kpovmodeler-1.1.3-r1.ebuild 1066 SHA256 72142a23b601280970f35d66394cf6bb149eefb399f923fa351421511785b33c SHA512 80f6defc420de430f69d3725efcbe049a4c78a25ffe65498d871d83396063b88cd8781914bf8d8d57f61dd723d5679ec51a596700a388b9de5917c06151359d9 WHIRLPOOL d2116dc6a9e0692b258e2bcedd12511ad9c8a097f10a4ec11d464a4c1a95f4f6b3c7b462c6f43ff1a588645f3ff87f67920377b1837e3e80919d4659d7e121f0
-EBUILD kpovmodeler-1.1.3.ebuild 881 SHA256 ac940b82861b1db65f1400ca16614f08d07913e2139e8fa7843a0d68556c04f7 SHA512 accb7149d96f78cd1434a0dbfcbb3accffeb9ecf1fa87faa2fe612cf2a611f9a462277a729a33feb7b4209ec19461ed5534c55e03b973e28e5623a866a84b207 WHIRLPOOL 8c311dc6c966951b5e67e78e8390653405aaad819fe6468ca8f217152b338bb5fa4d0e96633fd443965c89e985ce9697007dc56c7b9d189e538920aae0124aea
-MISC ChangeLog 1188 SHA256 00066c3d184223d3d94087d18981388d619dd8304939a5d56c5f76d1743358b2 SHA512 e40dc8942822a46aa1a91dbffc2702e7b7500757e399e7c3c1c1fa168d7d051fbf315a5d2b43810ae1acb70cd96ed8fbdf55fe1d671fc1675a6ba4249ae06527 WHIRLPOOL 210274a802a4f766b9be23552e438a9aa6c0f9b86e74d2a03c2f76d99a2f7455d4da5ca75d3e601282a7412afb4793e8317886025ca7f2c1b89cd0e05743a9b0
+MISC ChangeLog 1288 SHA256 3cc46508088021c0f15f0d5105e2930cff79e9adf8845477887036ff4636064d SHA512 4c089cb4c723b571a22a140906ce8ffe83093904142c2749cdd94a987c1604acde8878da66fe4aa87abb671e91c338cc02aba052f2cbd68dcc17b6fe0713573a WHIRLPOOL 56332020518d722d8102b8bb9564b6e75a00147d5003b8403e6986a6350a89b591e71131a4966b2baf274037d74a98acef812ed841609b5f6cb767244b341aed
 MISC metadata.xml 178 SHA256 9cc4401ca95c4354dcb1dce1219e3df30c024bb07c72c2206fd84e0f9b199909 SHA512 0ebcf9b0fdf0acf86f6b0501797449affb95d185f31bdc55efe18a053f0ab8d24c08d800b726f1a0cda51abdcefc1b65273b453cb630bea14bc7e94a59705e50 WHIRLPOOL c280441296b6c77589daf8a953b928fb186b0fc54b11c43928436e48746b1bd590e190ea6807d276c43dd6cf04179ecb810efd3f87985cd89ea773469c41f60f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRrM4nAAoJEMbwO6tnXQ0sSGIH/2xxrXR6m+1cDMPzXE1s/o8/
-/VelLL6iXHupuvO6IsiwkJuqbJdxw28GTgTUZ/RLFgZnC7Oo6BHwiaL8Zjgz+/pg
-AZyYG0qsNkkeo73Q/qMAiKbnz78j7K7MFod58NZAPeZNES//rAKSs4aDvmbwYFF6
-7Entahfa3lBzJ3IvmDgfotqFrCXu8Yd6FIfevi3eBzWHw8b10pqnglktqEvwfKh0
-hwAUtQqCDJ7+jb0sgHrUSjGbrmXZLQTzjxAW7tVd7RPA/cVpz2MWjNAHPp/2SRyT
-6LpYqA68oc+l40s5xo1D9RDhPHq597LXMo/wQtBzOV9jtxi1SNPNHl7WuySF5bU=
-=v1xT
+iQJiBAEBCABMBQJS8n3mRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7NH7D/4t8BkUJGBSmLWvWHFqo8bjDYhmAOqBPPnykbQ75CpnUBxCCqc8BU8zCcFk
+982IE0DZwhs1ghkqgOf/L5O4OJ0854OE+NBxQ3X/7CM/QYcTKpyaG5UT/Q2uAcmE
+kFLnG0wuxE2uWJdrQgwdLawNrQImOC6fDMYZPpiotjf6x0qk0/ojkPDS26in2ayd
+ATCv1/0wUATEILPLohIv3d6WJHSdZL/YcIuunE4sgddJdl9nhGfFZm9LRLL/PHM4
+c+aotdFCQmhDUrcoGRYn3urnLi/RL4Cuw+/yc+s3pFnWKlAPxcGC0k1yYaXrz18M
+ckuqOjTZWXe+o8I446VjQ3nNV/snhCGdD0R6LKqW/ab9qUpUS/X56xuqOiqM13oW
+DniHasu60oxSzj2l/fKrF5ldrr2brJRu9pdFT8uyV4KoIt35KTZ5B3oy1nQlCn+S
+V9KadKbL1TBj4kOIbEBPwQVuwaUiyeE8XehFac7uK5nrnPBlHhdPsldITckvWaOe
+/fYqAWjmRDLFA3kNueAyzizy0fn2lkgduqSaNdNdi3cRXBTc8806aaT7J0LTV2ju
+bv9IYd7hCDZQCmPshvakewBGF3Yh8lvo4q8KjkygPR3PhilDO5lhbCff2noWh9zb
+akKz4nu3HYIxxxJKW3vlPY/7ybZ4yriKhrNvNCQJqs3M5N6uHQ==
+=UBxo
 -----END PGP SIGNATURE-----
