@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/kpovmodeler
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/kpovmodeler/ChangeLog,v 1.10 2013/06/03 17:12:22 kensington Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/kpovmodeler/ChangeLog,v 1.11 2014/02/05 18:07:31 kensington Exp $
+
+  05 Feb 2014; Michael Palimaka <kensington@gentoo.org>
+  -kpovmodeler-1.1.3.ebuild:
+  Remove old.
 
 *kpovmodeler-1.1.3-r1 (03 Jun 2013)
 
