@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/dbus-test-runner
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/dbus-test-runner/ChangeLog,v 1.18 2013/12/08 20:06:06 pacho Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/dbus-test-runner/ChangeLog,v 1.19 2014/02/05 18:06:31 kensington Exp $
+
+  05 Feb 2014; Michael Palimaka <kensington@gentoo.org>
+  -dbus-test-runner-0.0.5.ebuild:
+  Remove old.
 
   08 Dec 2013; Pacho Ramos <pacho@gentoo.org> dbus-test-runner-12.10.1.ebuild:
   x86 stable, bug #478252
